// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiHeaderSection grow defaults to false 1`] = `
<div
  class="ouiHeaderSection ouiHeaderSection--dontGrow ouiHeaderSection--left"
/>
`;

exports[`OuiHeaderSection grow renders true 1`] = `
<div
  class="ouiHeaderSection ouiHeaderSection--grow ouiHeaderSection--left"
/>
`;

exports[`OuiHeaderSection is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiHeaderSection ouiHeaderSection--dontGrow ouiHeaderSection--left testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiHeaderSection renders optional params 1`] = `
<div
  class="ouiHeaderSection ouiHeaderSection--dontGrow ouiHeaderSection--left"
  style="color:blue"
>
  <span>
    Some years ago never mind how long precisely...
  </span>
</div>
`;

exports[`OuiHeaderSection side defaults to left 1`] = `
<div
  class="ouiHeaderSection ouiHeaderSection--dontGrow ouiHeaderSection--left"
/>
`;

exports[`OuiHeaderSection side renders right 1`] = `
<div
  class="ouiHeaderSection ouiHeaderSection--dontGrow ouiHeaderSection--right"
/>
`;
